Version 1.0.55 Fixes issue where resize handle is out of visibility

--- a/addon/styles/components/_split-view.scss
+++ b/addon/styles/components/_split-view.scss
@@ -75,9 +75,6 @@
         }
       }
     }
-    > .split-view-content {
-      padding-top: 6px;
-    }
   }
 
   &.split-view-horizontal {
